# Dory

./: .gitignore  AddressBarWidget.py  BookmarkTree.py  DIrectoryTreeView.py  DirecctoryTree.py  DirectoryCompleter.py  DirectoryTree.py  DirectoryTreeView.py  DoryWindow.py  FileTableView.py  FileViewerWidget.py  Glance.py  IconViewer.py  IconViewerWidget.py  LICENSE  MainWindow.py  MenuBarWidget.py  README.md  SearchInputWidget.py  SearchResultWidget.py  SearchThread.py  StatusBarWidget.py  TerminalOpener.py  addressBar.py  app.py  bookMarkListView.py  bookmarkMenu.py  bookmarks.json  catchExecptions.py  customFileSystemModel.py  dory.toml  editableFileSystemModel.py  fileTreeView.py  fileViewerWidget.py  folderTreeView.py  folderTreeView_ui.py  iconViewer.py  iconviewerWidget.py  layoutapp.py  menuBar.py  (+10 more)
fileTreeView/: fileTreeView.ui  fileTreeView_ui.py  main.py
reference Components/: Glance.py  WrappingItemDelegate.py  addressBar.py  directoryTreeView.py  menuBar.py  searchDialog.py
