[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Dory"
version = "0.1.0"
dependencies = [
    "PySide6"
]

# Optional metadata about your project
description = "A short description of your project"
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
license = "MIT"  # or whatever license you're using
