[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Dory"
version = "0.1.0"
dependencies = [
    "PySide6"
]

# Optional metadata about your project
description = "A short description of your project"
authors = [
    { name = "MrShah_21", email = "abhinav2122@gmail.com" }
]

